2024-09-18T01:01:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10913616652 # 839
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-09-18
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3261 / 0 3262 / +0 +1

2024-09-17T12:25:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10902980940 # 838
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-09-17
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3260 / 0 3261 / +0 +1

2024-09-16T01:04:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10875888986 # 835
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-09-16
* notice: query file size: 26418
* notice: accum prev / next / diff: re vi: 0 3256 / 0 3260 / +0 +4

2024-09-14T12:25:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10862381977 # 834
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-09-14
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3254 / 0 3256 / +0 +2

2024-09-14T01:05:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10858185434 # 833
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-09-14
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 3253 / 0 3254 / +0 +1

2024-09-08T01:11:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10755855254 # 821